# INF2004-T60

./: .gitignore  README.md
Drivers (Week 12)/tfq/: CMakeLists.txt
Drivers (Week 12)/tfq/access_point/: CMakeLists.txt  access_point.c
Drivers (Week 12)/tfq/bridging/: CMakeLists.txt  master.c  slave.c
Drivers (Week 12)/tfq/internet/: CMakeLists.txt  internet.c
Irsyad/lora/: CMakeLists.txt
Irsyad/lora/pico1/: CMakeLists.txt  pico1.c
Irsyad/lora/pico2/: CMakeLists.txt  pico2.c
JF/: CMakeLists.txt  Login - Starbucks® Rewards.html  MyRepublic@Starbucks.html  MyRepublic@StarbucksLogin.html  Public Wireless Internet access.html  picow_access_point.c  submit.html
JF/noOSFatFS2/: CMakeLists.txt
JF/noOSFatFS2/FatFs_SPI2/: CMakeLists.txt
JF/noOSFatFS2/dynamic_config_example/: CMakeLists.txt
JF/noOSFatFS2/self_example/: CMakeLists.txt  hw_config.c  main.c
JF/noOSFatFS2/web_SD/: CMakeLists.txt  cgi.h  htmldata.c  main.c  makefsdata.py  ssi.h
JF/noOSFatFS2/web_SD/html_files/: index.shtml
PROJECT/: CMakeLists.txt
PROJECT/FINAL/: CMakeLists.txt  pico_1.c  pico_2.c
PROJECT/access_point/: CMakeLists.txt  access_point.c
PROJECT/bridging/: CMakeLists.txt  master.c  slave.c
PROJECT/internet/: CMakeLists.txt  internet.c
YJ/Embedded-project/: CMakeLists.txt  main.c
YJ/Embedded-project/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: sd_card.c
YJ/Embedded-project/webserver/: CMakeLists.txt  main.c
YJ/Embedded-project/wifi_scan/: CMakeLists.txt  main.c
YJ/esp32-sniffer/simple_sniffer/: sdkconfig
YJ/esp32-sniffer/simple_sniffer/main/: simple_sniffer_example_main.c
YJ/esp32-wifi-penetration-tool-master/components/hccapx_serializer/: hccapx_serializer.c
YJ/esp32_Router/: platformio.ini
YJ/esp32_Router/components/cmd_nvs/: cmd_nvs.c  cmd_nvs.h
YJ/esp32_Router/components/cmd_router/: cmd_router.h
YJ/esp32_Router/components/cmd_system/: cmd_system.h
YJ/esp32_Router/main/: cmd_decl.h  http_server.c
YJ/esp32_nat_router-master/: README.md  platformio.ini
YJ/esp32_nat_router-master/components/cmd_router/: router_globals.h
YJ/esp32_nat_router-master/components/cmd_system/: cmd_system.c
YJ/esp32_nat_router-master/main/: esp32_nat_router.c  http_server.c
YJ/sdspi/: sdkconfig
YJ/sdspi/main/: sd_card_example_main.c
esp32-wifi-attack-tool/: README.md
esp32-wifi-attack-tool/components/frame_analyzer/: CMakeLists.txt  frame_analyzer.c
esp32-wifi-attack-tool/components/hccapx_serializer/: hccapx_serializer.c
esp32-wifi-attack-tool/components/hccapx_serializer/interface/: hccapx_serializer.h
esp32-wifi-attack-tool/components/webserver/: webserver.c
esp32-wifi-attack-tool/components/wifi_controller/: README.md  ap_scanner.h
esp32-wifi-attack-tool/components/wsl_bypasser/: wsl_bypasser.c
esp32-wifi-attack-tool/main/: README.md  attack_handshake.c  attack_pmkid.h  main.c
esp32_Router/: CMakeLists.txt  README.md  platformio.ini
esp32_Router/components/cmd_nvs/: cmd_nvs.h
esp32_Router/components/cmd_router/: cmd_router.c
esp32_Router/components/cmd_system/: cmd_system.h
esp32_Router/main/: esp32_nat_router.c  pages.h
esp32_router/src/: http_server.c
esp32_router/src/pages/: about.html  config.html
